Minor fixes here and there
- Fixed the VSCode workspace file

--- a/debugio/webpage/index.html
+++ b/debugio/webpage/index.html
@@ -45,7 +45,7 @@
                     //if data was a string, it would have the color set to the debug style applied to it
                 }
 			)
-			ipc.server.emit('abc');
+			ipc.of.helpfulrisk.emit('abc');
         }
     );
 	</script>
